first update Oct 11

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,400..700;1,400..700&display=swap"
         rel="stylesheet">
-    <title>Lotus Travel| From Low Cost To High Trust</title>
+    <title>Lotus Travel | From Low Cost To High Trust</title>
 </head>
 
 <body>
@@ -116,7 +116,6 @@
     </section>
 
 
-
     <section class="section__container destination__container" id="about">
         <h2 class="section__header">Điểm đến phổ biến</h2>
         <p class="section__description">
@@ -158,10 +157,10 @@
 
     <section class="section__container showcase__container" id="package">
         <div class="showcase__image">
-            <img src="assets/co-to-quoc.jpg" alt="showcase" />
+            <img src="assets/ban-do-viet-nam.jpg" alt="showcase" />
         </div>
         <div class="showcase__content">
-            <h4>Lotus Travel - nơi giúp những ước mơ du lịch của bạn thành hiện thực.</h4>
+            <h4>Lotus Travel</h4>
             <p>
                 Ra đời với sứ mệnh kết nối trái tim Việt trên mọi vùng trời tổ quốc, Lotus
                 Travel không chỉ mang đến những chuyến đi, mà còn lan tỏa những giá trị nhân
@@ -174,8 +173,8 @@
                 mỗi hành trình là một cơ hội để tình yêu nước lại ngân vang trong tim.
             </p>
             <p>
-                <i> Vì đất nước mình còn lạ, cần chi đâu nước ngoài <br>
-                    Đặt chân lên tất cả mọi miền là ước mơ ta ước hoài
+                <i> "Vì đất nước mình còn lạ, cần chi đâu nước ngoài <br>
+                    Đặt chân lên tất cả mọi miền là ước mơ ta ước hoài."
                 </i>
             </p>
             <div class="showcase__btn">
@@ -295,6 +294,7 @@
             <div class="footer__col">
                 <div class="footer__logo">
                     <a href="#" class="logo">Lotus Travel</a>
+                    <p>Theo dõi trên mạng xã hội</p>
                 </div>
                 <ul class="footer__socials">
                     <li>
@@ -313,21 +313,23 @@
                 <h4>Liên hệ</h4>
                 <ul class="footer__links">
                     <li>
-                        <a href="#">
-                            <span><i class="ri-phone-fill"></i></span> +84 90909090
-                        </a>
+                        <span><i class="ri-phone-fill"></i> +84 90909090</span>
                     </li>
                     <li>
-                        <a href="#">
-                            <span><i class="ri-record-mail-line"></i></span> hotrokhachhang@lotustravel
-                        </a>
+                        <span><i class="ri-record-mail-line"></i> hotro@lotustravel</span>
                     </li>
                     <li>
-                        <a href="#">
-                            <span><i class="ri-map-pin-2-fill"></i></span> Hà Nội, Việt Nam
-                        </a>
+                        <span><i class="ri-map-pin-2-fill"></i> Hà Nội, Việt Nam</span>
                     </li>
                 </ul>
+            </div>
+
+            <div class="sponsor">
+                <div class="logo__sponsors">
+                    <img src="assets/logo-world-travel-awards.png" alt="logo1">
+                    <img src="assets/logo-skyrax.png" alt="logo2">
+                    <img src="assets/logo-hus.png" alt="logo3">
+                </div>
             </div>
         </div>
         <div class="footer__bar">
