--- a/index.html
+++ b/index.html
@@ -6,114 +6,115 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,400..700;1,400..700&display=swap"
         rel="stylesheet">
     <title>Lotus Travel | From Low Cost To High Trust</title>
 </head>
 
 <body>
-    <nav>
-        <div class="nav__header">
-            <div class="nav__logo">
-                <a href="#" class="logo">Lotus Travel</a>
+    <div class="hero__section">
+        <nav>
+            <div class="nav__header">
+                <div class="nav__logo">
+                    <a href="#" class="logo">Lotus Travel</a>
+                </div>
+                <div class="nav__menu__btn" id="menu-btn">
+                    <i class="ri-menu-line"></i>
+                </div>
             </div>
-            <div class="nav__menu__btn" id="menu-btn">
-                <i class="ri-menu-line"></i>
+            <ul class="nav__links" id="nav-links">
+                <li><a href="#plan">Lên kế hoạch</a></li>
+                <li><a href="#information">Thông tin hành trình</a></li>
+                <li><a href="#bookticket">Mua vé</a></li>
+                <li><a href="#">Đăng nhập</a></li>
+            </ul>
+            <div class="nav__btns">
+                <button class="btn">Đăng nhập</button>
             </div>
-        </div>
-        <ul class="nav__links" id="nav-links">
-            <li><a href="#plan">Lên kế hoạch</a></li>
-            <li><a href="#information">Thông tin hành trình</a></li>
-            <li><a href="#bookticket">Mua vé</a></li>
-            <li><a href="#">Đăng nhập</a></li>
-        </ul>
-        <div class="nav__btns">
-            <button class="btn">Đăng nhập</button>
-        </div>
-    </nav>
+        </nav>
 
-    <section id="booking" class="booking-section">
-        <div class="booking-container">
-            <div class="booking-tabs">
-                <button class="tab active">✈️ Đặt vé</button>
-                <button class="tab">🎫 Làm thủ tục</button>
-                <button class="tab">📍 Quản lý đặt chỗ</button>
-            </div>
-
-            <form class="booking-form">
-                <div class="booking-type">
-                    <label><input type="radio" name="trip" value="oneway" checked> Một chiều</label>
-                    <label><input type="radio" name="trip" value="roundtrip"> Khứ hồi</label>
+        <section id="booking" class="booking-section">
+            <div class="booking-container">
+                <div class="booking-tabs">
+                    <button class="tab active">✈️ Đặt vé</button>
+                    <button class="tab">🎫 Làm thủ tục</button>
+                    <button class="tab">📍 Quản lý đặt chỗ</button>
                 </div>
 
-                <div class="booking-row">
-                    <div class="booking-group">
-                        <label>Từ</label>
-                        <input type="text" placeholder="Hà Nội (HAN)">
+                <form class="booking-form">
+                    <div class="booking-type">
+                        <label><input type="radio" name="trip" value="oneway" checked> Một chiều</label>
+                        <label><input type="radio" name="trip" value="roundtrip"> Khứ hồi</label>
                     </div>
 
-                    <div class="booking-group">
-                        <label>Đến</label>
-                        <input type="text" placeholder="TP. Hồ Chí Minh (SGN)">
-                    </div>
-
-                    <div class="booking-group">
-                        <label>Ngày đi</label>
-                        <input type="date">
-                    </div>
-
-                    <div class="booking-group">
-                        <label>Ngày về</label>
-                        <input type="date">
-                    </div>
-
-                    <div class="booking-group passenger-group">
-                        <label for="passenger-summary">Hành khách</label>
-                        <div class="passenger-box" onclick="togglePassengerPopup()">
-                            <span id="passenger-summary">1</span>
+                    <div class="booking-row">
+                        <div class="booking-group">
+                            <label>Từ</label>
+                            <input type="text" placeholder="Hà Nội (HAN)">
                         </div>
-                        <div class="passenger-popup" id="passenger-popup">
-                            <div class="passenger-row">
-                                <div>
-                                    <strong>Người lớn</strong>
-                                </div>
-                                <div class="counter">
-                                    <button type="button" onclick="changeCount('adult', -1)">-</button>
-                                    <span id="adult-count">1</span>
-                                    <button type="button" onclick="changeCount('adult', 1)">+</button>
-                                </div>
+
+                        <div class="booking-group">
+                            <label>Đến</label>
+                            <input type="text" placeholder="TP. Hồ Chí Minh (SGN)">
+                        </div>
+
+                        <div class="booking-group">
+                            <label>Ngày đi</label>
+                            <input type="date">
+                        </div>
+
+                        <div class="booking-group">
+                            <label>Ngày về</label>
+                            <input type="date">
+                        </div>
+
+                        <div class="booking-group passenger-group">
+                            <label for="passenger-summary">Hành khách</label>
+                            <div class="passenger-box" onclick="togglePassengerPopup()">
+                                <span id="passenger-summary">1</span>
                             </div>
-                            <div class="passenger-row">
-                                <div>
-                                    <strong>Trẻ em</strong><br><small>(2-11 tuổi)</small>
+                            <div class="passenger-popup" id="passenger-popup">
+                                <div class="passenger-row">
+                                    <div>
+                                        <strong>Người lớn</strong>
+                                    </div>
+                                    <div class="counter">
+                                        <button type="button" onclick="changeCount('adult', -1)">-</button>
+                                        <span id="adult-count">1</span>
+                                        <button type="button" onclick="changeCount('adult', 1)">+</button>
+                                    </div>
                                 </div>
-                                <div class="counter">
-                                    <button type="button" onclick="changeCount('child', -1)">-</button>
-                                    <span id="child-count">0</span>
-                                    <button type="button" onclick="changeCount('child', 1)">+</button>
+                                <div class="passenger-row">
+                                    <div>
+                                        <strong>Trẻ em</strong><br><small>(2-11 tuổi)</small>
+                                    </div>
+                                    <div class="counter">
+                                        <button type="button" onclick="changeCount('child', -1)">-</button>
+                                        <span id="child-count">0</span>
+                                        <button type="button" onclick="changeCount('child', 1)">+</button>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="passenger-row">
-                                <div>
-                                    <strong>Trẻ sơ sinh</strong><br><small>(0-2 tuổi)</small>
-                                </div>
-                                <div class="counter">
-                                    <button type="button" onclick="changeCount('infant', -1)">-</button>
-                                    <span id="infant-count">0</span>
-                                    <button type="button" onclick="changeCount('infant', 1)">+</button>
+                                <div class="passenger-row">
+                                    <div>
+                                        <strong>Trẻ sơ sinh</strong><br><small>(0-2 tuổi)</small>
+                                    </div>
+                                    <div class="counter">
+                                        <button type="button" onclick="changeCount('infant', -1)">-</button>
+                                        <span id="infant-count">0</span>
+                                        <button type="button" onclick="changeCount('infant', 1)">+</button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
 
-                    <div class="booking-group">
-                        <button type="submit" class="btn">Tìm chuyến bay</button>
+                        <div class="booking-group">
+                            <button type="submit" class="btn">Tìm chuyến bay</button>
+                        </div>
                     </div>
-                </div>
-            </form>
-        </div>
-    </section>
+                </form>
+            </div>
+        </section>
+    </div>
 
 
     <section class="section__container destination__container" id="about">
@@ -201,7 +202,7 @@
                 </div>
                 <p>Dịch vụ tốt, phản hồi yêu cầu của khách hàng nhanh.</p>
                 <div class="feedback__user">
-                    <img src="assets/avatar1.jpg" alt="client">
+                    <img src="assets/avt2.jpg" alt="client">
                     <div>
                         <h4>Trần Long Thiên Kim</h4>
                         <small>Hành khách chuyến bay VN7151 <br> (Hà Nội - Đà Nẵng)</small>
@@ -278,7 +279,7 @@
                 </div>
                 <p>5 sao</p>
                 <div class="feedback__user">
-                    <img src="assets/avatar6.jpg" alt="client">
+                    <img src="assets/avt3.jpg" alt="client">
                     <div>
                         <h4>Trần Long Phương Nghi</h4>
                         <small>Hành khách chuyến bay QH1622 <br> (Phú Quốc - Hà Nội)</small>
@@ -338,7 +339,6 @@
     </footer>
 
     <script src="https://unpkg.com/scrollreveal"></script>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="main.js"></script>
 </body>
 
