first update Oct 13

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="booking-tabs">
                 <button class="tab active" data-tab="booking">✈️ Đặt vé</button>
                 <button class="tab" data-tab="checkin">🎫 Làm thủ tục</button>
-                <button class="tab" data-tab="manage">📍 Quản lý đặt chỗ</button>
+                <button class="tab" data-tab="management">📍 Quản lý đặt chỗ</button>
             </div>
 
             <div class="booking-container active">
@@ -116,39 +116,37 @@
             </div>
 
             <div class="checkin-container">
-                <form class="tab-content active" id="code">
-                    <p>
-                        <strong>
-                            Làm thủ tục trực tuyến trong khoảng 24 giờ đến 1 giờ trước khi chuyến bay khởi hành. <br>
-                            Vui lòng nhập đúng họ như trên vé của bạn.
-                        </strong>
-                    </p>
-                    <div class="checkin-row">
-                        <div class="checkin-group">
-                            <label>Mã đặt chỗ</label>
-                            <input type="text" placeholder="123XXX">
-                        </div>
-                        <div class="checkin-group">
-                            <label>Họ</label>
-                            <input type="text" placeholder="NGUYEN">
-                        </div>
-                    </div>
-                    <button type="submit" class="btn">Làm thủ tục</button>
-                </form>
-            </div>
-
-            <div class="management-container">
-                <form>
+                <p>
+                    <strong>
+                        Làm thủ tục trực tuyến trong khoảng 24 giờ đến 1 giờ trước khi chuyến bay khởi hành. <br>
+                        Vui lòng nhập đúng họ như trên vé của bạn.
+                    </strong>
+                </p>
+                <div class="checkin-row">
                     <div class="checkin-group">
-                        <label>Mã đặt chỗ/ Số vé</label>
-                        <input type="text" placeholder="123XXXXXXXXXX">
+                        <label>Mã đặt chỗ</label>
+                        <input type="text" placeholder="123XXX">
                     </div>
                     <div class="checkin-group">
                         <label>Họ</label>
                         <input type="text" placeholder="NGUYEN">
                     </div>
-                    <button type="submit" class="btn">Tìm kiếm</button>
-                </form>
+                </div>
+                <button type="submit" class="btn">Làm thủ tục</button>
+            </div>
+
+            <div class="management-container">
+                <div class="management-row">
+                    <div class="management-group">
+                        <label>Mã đặt chỗ</label>
+                        <input type="text" placeholder="123XXX">
+                    </div>
+                    <div class="management-group">
+                        <label>Họ</label>
+                        <input type="text" placeholder="NGUYEN">
+                    </div>
+                </div>
+                <button type="submit" class="btn">Tìm kiếm</button>
             </div>
         </section>
     </div>
@@ -332,19 +330,7 @@
             <div class="footer__col">
                 <div class="footer__logo">
                     <a href="#" class="logo">Lotus Travel</a>
-                    <p>Theo dõi trên mạng xã hội</p>
                 </div>
-                <ul class="footer__socials">
-                    <li>
-                        <a href="#"><i class="ri-facebook-fill"></i></a>
-                    </li>
-                    <li>
-                        <a href="#"><i class="ri-instagram-line"></i></a>
-                    </li>
-                    <li>
-                        <a href="#"><i class="ri-youtube-line"></i></a>
-                    </li>
-                </ul>
             </div>
 
             <div class="footer__col">
