third update Oct 13

--- a/flights.html
+++ b/flights.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style/booking.css">
 </head>
 <body>
-  <h1 id="result-title">Vui lòng chọn chuyến đi</h1>
+  <h1>Chuyến bay Hà Nội → TP.HCM</h1>
   <div id="flight-list" class="flight-list"></div>
 
   <!-- Thư viện PapaParse để đọc CSV -->
