--- a/index.html
+++ b/index.html
@@ -387,6 +387,7 @@
 
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="javascript/main.js"></script>
+    <script src="javascript/booking.js"></script>
 </body>
 
 </html>
