--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                         </div>
 
                         <div class="booking-group">
-                            <button type="submit" class="btn">Tìm chuyến bay</button>
+                            <button type="submit" class="btn" id="find-flight-btn">Tìm chuyến bay</button>
                         </div>
                     </div>
                 </form>
