first update Oct 17

--- a/booking.html
+++ b/booking.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 
 <head>
   <meta charset="UTF-8">
-  <title>Danh sách chuyến bay</title>
+  <title>Tìm chuyến bay</title>
   <link rel="stylesheet" href="style/booking.css">
 </head>
 
@@ -12,7 +12,6 @@
   <div class="select_flight">
     <div id="flight-list" class="flight-list"></div>
   </div>
-  
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
   <script src="javascript/booking.js"></script>
 </body>
