first update Oct 18

--- a/passenger-info.html
+++ b/passenger-info.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Thông tin hành khách</title>
-    <link rel="stylesheet" href="style/payment.css">
+    <link rel="stylesheet" href="style/passenger-info.css">
 </head>
 
 
@@ -45,13 +45,10 @@
             <input type="number" id="phonenumber" name="phonenumber" placeholder="Số điện thoại"
                 pattern="^[0-9+]{8,15}$" required>
 
-            <button type="submit">Xác nhận thông tin</button>
-        </form>
-    </section>
-
-    <section class="services">
-        <h1>Các dịch vụ bổ sung</h1>
-        <form id="extra-services-form">
+        
+            <div class="passenger-info">
+                <h1>Các dịch vụ bổ sung</h1>
+            </div>
             <div class="service-items">
                 <label>
                     <input type="checkbox" name="baggage" id="baggage">
@@ -60,9 +57,9 @@
                 <div class="service-details" id="baggage-options" style="display: none;">
                     <select name="baggage-weight">
                         <option value="">-- Chọn gói hành lý --</option>
-                        <option value="15kg">15kg - 180.000 VND</option>
-                        <option value="20kg">20kg - 220.000 VND</option>
-                        <option value="25kg">25kg - 260.000 VND</option>
+                        <option value="20kg">20kg - 260.000 VND</option>
+                        <option value="30kg">30kg - 390.000 VND</option>
+                        <option value="40kg">40kg - 520.000 VND</option>
                     </select>
                 </div>
             </div>
@@ -75,32 +72,21 @@
                 <div class="service-details" id="meal-options" style="display: none;">
                     <select name="meal-type">
                         <option value="">-- Chọn suất ăn --</option>
-                        <option value="chay">Suất ăn chay - 90.000 VND</option>
-                        <option value="thuong">Suất ăn tiêu chuẩn - 120.000 VND</option>
-                        <option value="dacbiet">Suất ăn đặc biệt - 150.000 VND</option>
+                        <option value="tieuchuan">Suất ăn tiêu chuẩn</option>
+                        <option value="chay">Suất ăn chay</option>
+                        <option value="thuong">Suất ăn cho trẻ sơ sinh và trẻ em</option>
+                        <option value="dacbiet">Suất ăn đặc biệt</option>
                     </select>
                 </div>
             </div>
 
-            <div class="service-item">
-                <label>
-                    <input type="checkbox" name="seat" id="seat">
-                    Chọn chỗ ngồi ưu tiên
-                </label>
-                <div class="service-details" id="seat-options" style="display: none;">
-                    <select name="seat-type">
-                        <option value="">-- Chọn chỗ ngồi --</option>
-                        <option value="gan-cua-so">Gần cửa sổ - 100.000 VND</option>
-                        <option value="gan-loi-di">Gần lối đi - 100.000 VND</option>
-                        <option value="hang-dau">Hàng ghế đầu - 150.000 VND</option>
-                    </select>
-                </div>
-            </div>
+            <button type="submit" id="nextButton">Tiếp tục chọn chỗ ngồi</button>
         </form>
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
-    <script src="javascript/payment.js"></script>
+    <script src="javascript/passenger-info.js"></script>
+    <script src="javascript/seat-selection.js"></script>
 </body>
 
 </html>
