third update Oct 18

--- a/pages/booking.html
+++ b/pages/booking.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Tìm chuyến bay</title>
-  <link rel="stylesheet" href="style/booking.css">
+  <link rel="stylesheet" href="../style/booking.css">
 </head>
 
 <body>
@@ -13,7 +13,8 @@
     <div id="flight-list" class="flight-list"></div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
-  <script src="javascript/booking.js"></script>
+  <script src="../javascript/booking.js"></script>
+  <script src="../javascript/passenger-info.js"></script>
 </body>
 
 </html>
