--- a/pages/passenger-info.html
+++ b/pages/passenger-info.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Thông tin hành khách</title>
-    <link rel="stylesheet" href="style/passenger-info.css">
+    <link rel="stylesheet" href="../style/passenger-info.css">
 </head>
 
 
@@ -85,8 +85,8 @@
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
-    <script src="javascript/passenger-info.js"></script>
-    <script src="javascript/seat-selection.js"></script>
+    <script src="../javascript/passenger-info.js"></script>
+    <script src="../javascript/seat-selection.js"></script>
 </body>
 
 </html>
