--- a/pages/seat-selection.html
+++ b/pages/seat-selection.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Chọn chỗ ngồi</title>
-  <link rel="stylesheet" href="style/seat-selection.css">
+  <link rel="stylesheet" href="../style/seat-selection.css">
 </head>
 <body>
   <section class="seat-selection">
@@ -36,6 +36,6 @@
     <button id="confirmSeat">Xác nhận chỗ ngồi</button>
   </section>
 
-  <script src="javascript/seat-selection.js"></script>
+  <script src="../javascript/seat-selection.js"></script>
 </body>
 </html>
