--- a/pages/seat-selection.html
+++ b/pages/seat-selection.html
@@ -1,41 +1,58 @@
 <!DOCTYPE html>
 <html lang="vi">
+
 <head>
   <meta charset="UTF-8">
   <title>Chọn chỗ ngồi</title>
   <link rel="stylesheet" href="../style/seat-selection.css">
 </head>
-<body>
-  <section class="seat-selection">
-    <h1>Chọn chỗ ngồi trên máy bay</h1>
-    <p>Chọn chỗ ngồi mong muốn của bạn <br>
-      Ghế đã chọn sẽ được tô màu xanh dương
-    </p>
 
+<body>
+  <h1>Chọn chỗ ngồi trên máy bay</h1>
+  <div class="note">
+    <p>Chọn chỗ ngồi mong muốn của bạn <br> Ghế đã chọn sẽ được tô màu xanh dương</p>
+  </div>
+  <section class="seat-selection">
     <div class="plane">
-      <div class="plane-nose"></div>
-      <div class="seat-map" id="seat-map"></div>
-      <div class="plane-tail">
+      <div class="plane-nose">
         <div class="restroom">
           <svg width="20" height="20" viewBox="0 0 24 24" fill="none" aria-hidden>
-            <path d="M6 2v7" stroke="#fff" stroke-width="1.8" stroke-linecap="round"/>
-            <path d="M18 2v7" stroke="#fff" stroke-width="1.8" stroke-linecap="round"/>
-            <rect x="2" y="10" width="20" height="10" rx="2" fill="#4b5563"/>
+            <path d="M6 2v7" stroke="#fff" stroke-width="1.8" stroke-linecap="round" />
+            <path d="M18 2v7" stroke="#fff" stroke-width="1.8" stroke-linecap="round" />
+            <rect x="2" y="10" width="20" height="10" rx="2" fill="#4b5563" />
           </svg>
           <span>Restroom</span>
         </div>
       </div>
+      <div class="seat-map" id="seat-map"></div>
+      <div class="plane-tail">
+        <div class="restroom">
+          <svg width="20" height="20" viewBox="0 0 24 24" fill="none" aria-hidden>
+            <path d="M6 2v7" stroke="#fff" stroke-width="1.8" stroke-linecap="round" />
+            <path d="M18 2v7" stroke="#fff" stroke-width="1.8" stroke-linecap="round" />
+            <rect x="2" y="10" width="20" height="10" rx="2" fill="#4b5563" />
+          </svg>
+          <span>Restroom</span>
+        </div>
+      </div>
+      <div class="seat-order">
+      <div class="seat-status">
+        <div class="status available"></div>
+        <span>Ghế trống</span>
+      </div>
+      <div class="seat-status">
+        <div class="status selected"></div>
+        <span>Ghế bạn chọn</span>
+      </div>
+      <div class="seat-status">
+        <div class="status booked"></div>
+        <span>Ghế đã đặt</span>
+      </div>
     </div>
-
-    <div class="info">
-      <p><span class="seat available"></span> Ghế trống</p>
-      <p><span class="seat selected"></span> Ghế bạn chọn</p>
-      <p><span class="seat booked"></span> Ghế đã đặt</p>
-    </div>
-
     <button id="confirmSeat">Xác nhận chỗ ngồi</button>
   </section>
 
   <script src="../javascript/seat-selection.js"></script>
 </body>
+
 </html>
